<?xml version="1.0"?>
<package format="2">
    <name>teb_planner_pa</name>
    <version>1.0.0</version>
    <description>
        This package is just a wrapper to access teb-planner-node without
        implementing the navigation stack.
    </description>


    <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>

    <license>BSD</license>
    <author email="wepet@hrz.tu-chemnitz.de">Peter Weissig</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>dynamic_reconfigure</depend>

    <depend>teb_local_planner</depend>
    <depend>nav_core</depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>costmap_converter</depend>
    <depend>visualization_msgs</depend>
    <depend>teb_planner_pa_msgs</depend>

    <depend>tf</depend>
    <depend>tf_conversions</depend>

    <doc_depend>doxygen</doc_depend>
    <doc_depend>teb_planner_pa_msgs</doc_depend>
</package>
