<?xml version="1.0"?>
<package format="2">
  <name>costmap_converter</name>
  <version>0.0.11</version>
  <description>
    A ros package that includes plugins and nodes to convert occupied costmap2d cells to primitive types.
  </description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>
  <author email="franz.albers@tu-dortmund.de">Franz Albers</author>
  <author email="otniel.rinaldo@tu-dortmund.de">Otniel Rinaldo</author> 

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/costmap_converter</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>rostest</test_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <costmap_converter plugin="${prefix}/plugins.xml" />
  </export>
</package>
