<?xml version="1.0"?>
<package format="2">
    <name>teb_planner_pa_msgs</name>
    <version>1.1.0</version>
    <description>
        This package contains all messages of the teb_planner_pa package.
    </description>


    <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>

    <license>BSD</license>
    <author email="wepet@hrz.tu-chemnitz.de">Peter Weissig</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>teb_local_planner</build_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>costmap_converter</build_depend>
    <build_depend>visualization_msgs</build_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
